--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,6 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 22.15
-      - run: npm install
+      - run: npm ci
       - run: npm run test
       - run: npm start
