--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
+          token: ${{ secrets.GH_DOTCOM_TOKEN }}
           node-version: 22.15
       - run: npm ci
       - run: npm run test
