--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,10 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '22.15'
-      - run: npm ci
+          cache: npm
+
+      - name: Install Dependencies
+        run: npm install
+        
       - run: npm run test
       - run: npm start
