--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,23 +8,11 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '22.15'
-          cache: npm
-
-      - name: Clear NPM Authentication
-        run: |
-          if [ -f ~/.npmrc ]; then
-            rm -f ~/.npmrc
-          fi
-     
-      - name: Debug Environment
-        run: |
-          echo "Checking for .npmrc file..."
-          ls -la ~/.npmrc || echo "No .npmrc file found"
-
+    
       - name: Install Dependencies
-        run: npm install
+        run: yarn install
 
-      - run: npm run test
-      - run: npm start
+      - run: yarn test
+      - run: yarn start
 
 
