--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,21 @@ jobs:
 
       - run: yarn test
       - run: yarn start
+  
+  publish-application:
+    runs-on: ubuntu-latest
+    name: Node ${{ matrix.node }} sample
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 22
+    
+      - name: Install Dependencies
+        run: yarn install
+
+      - run: yarn test
+      - run: yarn start
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
